# tinycortex

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  requirements.txt
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
benchmarks/effectiveness/: Cargo.toml  README.md
benchmarks/effectiveness/data/: fixtures_v1.json
benchmarks/effectiveness/src/: backend.rs  dataset.rs  dataset_tests.rs  harness.rs  lib.rs  main.rs  metrics.rs  metrics_tests.rs
crates/tinycortex/: Cargo.toml
crates/tinycortex/src/: lib.rs
crates/tinycortex/src/memory/: mod.rs  store.rs  types.rs
crates/tinycortex/tests/: smoke.rs
docs/: openhuman-memory-engine-spec.md  openhuman-memory-migration.md
docs/openhuman-memory/: README.md  agent-tool-goals-memory.md  controller-tool-registry.md  conversation-archivist.md  core-orchestration.md  diff-layer.md  entities-graph.md  openhuman-code-reference.md  sources-registry-sync.md  storage-primitives.md  tree-queue-retrieval.md
docs/plan/: 01-migration-library.md  02-completion-gaps.md  03-testing-benchmarks.md  04-openhuman-integration.md  05-openhuman-compat-matrix.md  06-persona-agent-demo.md  06-persona-distillation.md  06-persona-rubric.md  README.md
docs/spec/: README.md  configurable-store.md  flavoured-trees.md  improvement-plan.md
docs/spec/audit/: 01-store-chunks.md  02-score-retrieval-graph.md  03-tree-archivist-conversations.md  04-queue-ingest.md  05-diff-sources-goals-toolmemory.md  06-contracts-config-api.md  07-modularity-boundaries.md  08-configurability.md  09-verification-infrastructure.md  10-simplification-dead-weight.md
docs/spec/tests/: integration-e2e-tests.md  peripheral-stores-tests.md  queue-ingest-tests.md  retrieval-scoring-tests.md  storage-durability-tests.md  tree-concurrency-tests.md
examples/: composio_harness.rs  persona_agent.rs  persona_harness.rs  seed_memory.rs
gitbooks/: README.md  SUMMARY.md  api-key.md  architecture.md  benchmarks.md  contributing.md  conversations-and-archivist.md  core-concepts.md  diff-layer.md  entities-and-graph.md  faq.md  getting-started.md  goals-and-tool-memory.md  how-memory-works.md  ingest-pipeline.md  job-queue.md  memory-tree.md  retrieval.md  scoring-and-extraction.md  sources.md  storage-primitives.md
gitbooks/architecture-overview/: README.md  privacy-architecture.md
gitbooks/benchmarks/: README.md  babilong.md  benchmarks.md  ragas.md  run-your-own.md  temporalbench.md  vending-bench.md
gitbooks/developers/concepts/: README.md  context.md  ingest.md  interactions.md  memory-decay.md  memory-items.md  recall.md  timestamps.md
gitbooks/developers/sdk-functions/: README.md  deleting-memories.md  inserting-memories.md  recalling-memories.md
gitbooks/developers/third-party-plugins-integrations/: openclaw-plugin.md
gitbooks/faq/: data-and-organization.md  general.md  how-it-works.md  pricing-and-access.md  privacy-and-security.md
gitbooks/getting-started/: low-level-sdk.md  query-modes.md
gitbooks/use-cases/: customer-support.md  personalized-assistant.md  team-kb-agent.md
paper/: Makefile  README.md  arxiv.sty  main.tex
paper/scripts/: setup.sh
scripts/: setup.sh  test.sh
src/: lib.rs
src/memory/: config.rs  config_tests.rs  error.rs  fsutil.rs  fsutil_tests.rs  mod.rs  traits.rs  types.rs  types_tests.rs
src/memory/archivist/: clip.rs  clip_tests.rs  compose.rs  compose_tests.rs  mod.rs  sink.rs  store.rs  store_tests.rs  tree_writer.rs  tree_writer_tests.rs  types.rs  types_tests.rs
src/memory/chunks/: connection.rs  connection_breaker.rs  connection_tests.rs  embeddings.rs  migrations.rs  mod.rs  produce.rs  produce_split.rs  produce_tests.rs  raw_refs.rs  recovery.rs  recovery_tests.rs  schema.rs  semantic.rs  semantic_tests.rs  store.rs  store_conn_tests.rs  store_delete.rs  store_embed_tests.rs  store_list.rs  store_sources.rs  store_tests.rs  store_tests_more.rs  types.rs  types_tests.rs
src/memory/config/: policy.rs  policy_tests.rs
src/memory/conversations/: bus.rs  bus_tests.rs  inverted_index.rs  inverted_index_tests.rs  mod.rs  store.rs  store_index.rs  store_ops.rs  store_tests.rs  store_tests_late.rs  store_tests_more.rs  tokenize.rs  tokenize_tests.rs  types.rs  types_tests.rs
src/memory/diff/: checkpoint.rs  diff.rs  engine_tests.rs  ledger.rs  ledger_helpers.rs  ledger_tests.rs  mod.rs  snapshot.rs  source.rs  source_tests.rs  types.rs  types_tests.rs
src/memory/entities/: canonical.rs  canonical_tests.rs  frontmatter.rs  frontmatter_tests.rs  mod.rs  store.rs  store_tests.rs  types.rs  types_tests.rs
src/memory/goals/: mod.rs  reflect.rs  reflect_tests.rs  store.rs  store_tests.rs  types.rs  types_tests.rs
src/memory/graph/: bfs.rs  edge_store.rs  mod.rs  query.rs  query_tests.rs  types.rs  types_tests.rs
src/memory/ingest/: mod.rs  pipeline.rs  pipeline_tests.rs  types.rs
src/memory/persona/: compile.rs  compile_tests.rs  config.rs  config_tests.rs  distill.rs  distill_tests.rs  mod.rs  pipeline.rs  pipeline_tests.rs  reduce.rs  reduce_tests.rs  retrieve.rs  retrieve_tests.rs  state.rs  state_tests.rs  types.rs  types_tests.rs
src/memory/providers/: mod.rs  openrouter.rs  openrouter_tests.rs
src/memory/queue/: gate.rs  gate_tests.rs  handlers.rs  mod.rs  ops.rs  (+18 more)
tests/: composio_sync_live.rs  composio_sync_mock.rs  flavoured_tree.rs  persona_e2e.rs  smoke.rs
viewer/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json
viewer/app/: globals.css  layout.tsx  nav.tsx  page.tsx
viewer/lib/: memory.ts  ui.tsx
wiki/: Architecture-Overview.md  Benchmarks.md  Building-and-Contributing.md  Conversations-and-Archivist.md  Core-Concepts.md  Diff-Layer.md  Entities-and-Graph.md  FAQ.md  Getting-Started.md  Goals-and-Tool-Memory.md  Home.md  Ingest-Pipeline.md  Job-Queue.md  Retrieval.md  Scoring-and-Extraction.md  Sources.md  Storage-Primitives.md  Summary-Trees.md  _Footer.md  _Sidebar.md
(+265 files in other folders)
