[package]
name = "tinycortex"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tinyhumansai/tinycortex"
description = "Rust core for the TinyCortex memory system"
readme = "README.md"
exclude = [
    ".github/",
    ".vscode/",
    "benchmarks/",
    "docs/",
    "examples/",
    "gitbooks/",
    "paper/",
    "requirements.txt",
]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
# Native-linking deps pinned to OpenHuman's versions so the host and the crate
# link ONE bundled SQLite and ONE libgit2 (both are `links = "…"` crates; two
# versions in one binary is a hard Cargo error). Keep in lockstep with the host
# root Cargo.toml when either side bumps.
git2 = { version = "0.21", default-features = false, features = ["vendored-libgit2"] }
parking_lot = "0.12"
rand = "0.10"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
