[package]
name = "tinycortex"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tinyhumansai/tinycortex"
description = "Rust core for the TinyCortex memory system"
readme = "README.md"
exclude = [
    ".github/",
    ".vscode/",
    "benchmarks/",
    "docs/",
    "examples/",
    "gitbooks/",
    "paper/",
    "requirements.txt",
]

[features]
# Dependency-light, fully synchronous core. No heavyweight native or async
# dependencies are pulled in by default; every heavy capability is opt-in below.
default = []

# Async background worker loops for the job queue (`memory::queue::runtime`).
# Turns `tokio` into a real (optional) dependency rather than a test-only one so
# a host can run the append/seal/flush pipeline as always-on loops instead of
# driving `run_once` by hand.
tokio = ["dep:tokio"]

# Git-backed source snapshots / diffs / checkpoints (`memory::diff`). Gates the
# heavy native `git2`/libgit2 dependency; with the feature off the whole `diff`
# module (and libgit2) compiles out.
git-diff = ["dep:git2"]

# reqwest-based embedding / LLM HTTP providers (`memory::providers`). Pulls in
# the reqwest stack and needs an async runtime, so it implies `tokio`. The
# concrete providers land with goals C3/M3; this feature reserves the seam and
# gates the dependency.
providers-http = ["dep:reqwest", "tokio"]

# Live source synchronization (Composio HTTP pipelines and workspace scans).
# Host schedulers, credentials, RPC, and event buses remain outside the crate.
sync = ["dep:reqwest", "dep:tracing", "tokio"]

# serde schema / envelope surface for the RPC boundary (`memory::rpc`). Reserved
# for goal C5; gates the wire-facing surface without adding heavy dependencies
# (serde is already a core dependency).
rpc = []

[dependencies]
anyhow = "1"
log = "0.4"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rand = "0.10"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
sha2 = "0.10"
thiserror = "2"
tinyagents = { git = "https://github.com/senamakel/tinyagents", rev = "8f75355" }
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

# ── Optional, feature-gated dependencies ────────────────────────────────────
# Native-linking deps are pinned to OpenHuman's versions so the host and the
# crate link one bundled SQLite and one libgit2. Keep in lockstep with the host
# root Cargo.toml when either side bumps.
# git2 links libgit2 (heavy native build) — only for the `git-diff` feature.
git2 = { version = "0.21", default-features = false, features = [
    "vendored-libgit2",
], optional = true }
# reqwest pulls a large async HTTP stack — only for the `providers-http` feature.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
tracing = { version = "0.1", optional = true }
# tokio powers the optional background worker loops (`tokio` feature). It is
# also listed under dev-dependencies so the async test suite always compiles.
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
wiremock = "0.6"

[[test]]
name = "composio_sync_mock"
required-features = ["sync"]

[[test]]
name = "composio_sync_live"
required-features = ["sync"]
