[package]
name = "tinycortex"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/tinyhumansai/tinycortex"
description = "Rust core for the TinyCortex memory system"
readme = "README.md"
exclude = [
    ".github/",
    ".vscode/",
    "benchmarks/",
    "docs/",
    "gitbooks/",
    "paper/",
    "requirements.txt",
    "viewer/",
]

[features]
# Dependency-light, fully synchronous core. No heavyweight native or async
# dependencies are pulled in by default; every heavy capability is opt-in below.
default = []

# Async background worker loops for the job queue (`memory::queue::runtime`).
# Turns `tokio` into a real (optional) dependency rather than a test-only one so
# a host can run the append/seal/flush pipeline as always-on loops instead of
# driving `run_once` by hand.
tokio = ["dep:tokio"]

# Git-backed source snapshots / diffs / checkpoints (`memory::diff`). Gates the
# heavy native `git2`/libgit2 dependency; with the feature off the whole `diff`
# module (and libgit2) compiles out.
git-diff = ["dep:git2"]

# reqwest-based embedding / LLM HTTP providers (`memory::providers`). Pulls in
# the reqwest stack and needs an async runtime, so it implies `tokio`.
providers-http = ["dep:reqwest", "tokio"]

# Live source synchronization (Composio HTTP pipelines and workspace scans).
# Host schedulers, credentials, RPC, and event buses remain outside the crate.
sync = ["dep:reqwest", "dep:tracing", "tokio"]

# Persona distillation surface (`memory::persona`): ingests local coding-agent
# history, instruction files, and git commits into a durable persona memory
# layer (doc 06). Adds NO new dependencies — readers reuse `serde_json`,
# `walkdir`, `rusqlite`, `sha2` from core; the git-history reader additionally
# requires the `git-diff` feature. A live run also wants `providers-http` for
# the OpenRouter reference provider, but the pipeline depends only on the
# `ChatProvider` / `Summariser` / `EmbeddingBackend` traits.
persona = []
[dependencies]
anyhow = "1"
log = "0.4"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
rand = "0.10"
regex = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
sha2 = "0.10"
thiserror = "2"
# Kept in lockstep with OpenHuman's vendored TinyAgents checkout. Standalone
# development resolves this requirement to `vendor/tinyagents` through
# `.cargo/config.toml`; embedding hosts may supply their own crates.io patch so
# the host and TinyCortex share one `EmbeddingModel` trait identity.
tinyagents = "2.1"
toml = "0.8"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

# ── Optional, feature-gated dependencies ────────────────────────────────────
# Native-linking deps are pinned to OpenHuman's versions so the host and the
# crate link one bundled SQLite and one libgit2. Keep in lockstep with the host
# root Cargo.toml when either side bumps.
# git2 links libgit2 (heavy native build) — only for the `git-diff` feature.
git2 = { version = "0.21", default-features = false, features = [
    "vendored-libgit2",
], optional = true }
# reqwest pulls a large async HTTP stack — only for live synchronization.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
], optional = true }
tracing = { version = "0.1", optional = true }
# tokio powers the optional background worker loops (`tokio` feature). It is
# also listed under dev-dependencies so the async test suite always compiles.
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
], optional = true }

[dev-dependencies]
dotenvy = "0.15"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
wiremock = "0.6"

# Standalone TinyCortex development still uses the pinned nested submodule.
# Cargo ignores dependency-local patches when TinyCortex is consumed by a host,
# allowing that host's crates.io patch to select its canonical TinyAgents copy.
[patch.crates-io]
tinyagents = { path = "vendor/tinyagents" }

[[test]]
name = "composio_sync_mock"
required-features = ["sync"]

[[test]]
name = "composio_sync_live"
required-features = ["sync"]

# Persona pipeline end-to-end over fixtures against a wiremock OpenRouter.
[[test]]
name = "persona_e2e"
required-features = ["persona", "providers-http", "git-diff"]

# Runnable persona distillation harness (doc 06).
# `OPENROUTER_API_KEY=... cargo run --example persona_harness --features persona,providers-http,git-diff -- backfill`
[[example]]
name = "persona_harness"
required-features = ["persona", "providers-http", "git-diff"]

# Persona decision agent: algorithmic BM25 retrieval + a tinyagents LLM pass
# over the distilled persona memory layer (doc 06 follow-on).
# `OPENROUTER_API_KEY=... cargo run --example persona_agent --features persona -- "<question>"`
[[example]]
name = "persona_agent"
required-features = ["persona"]

# Runnable connection + memory-sync harness for a live Composio API key.
# `COMPOSIO_API_KEY=... cargo run --example composio_harness --features sync`
[[example]]
name = "composio_harness"
required-features = ["sync"]

# Seed a workspace with sample synced memory for the viewer (no API key needed).
# `TINYCORTEX_WORKSPACE=/tmp/demo cargo run --example seed_memory --features sync`
[[example]]
name = "seed_memory"
required-features = ["sync"]
