[package]
name = "tinycortex-bench-effectiveness"
version = "0.1.0"
edition = "2021"
publish = false
description = "Retrieval-effectiveness benchmark harness for TinyCortex memory backends"

# This is a standalone dev harness, intentionally kept out of the published
# `tinycortex` package (see the parent `Cargo.toml` `exclude` list). It path-
# depends on the crate under test and is not a workspace member.

[[bin]]
name = "effectiveness"
path = "src/main.rs"

[lib]
name = "tinycortex_bench_effectiveness"
path = "src/lib.rs"

[dependencies]
tinycortex = { path = "../.." }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
