[package]
name = "tinycortex"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust core for the TinyCortex memory system"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
